grammar.js
    source_file: ($) => repeat($._statement),

    // `//!` (module doc) and `///` (doc) are re-tagged variants of a plain `//` comment; all
    // three share a prefix so ties are broken by precedence (mirrors lexer.cc's classify_comment).
    doc_comment: (_) => token(prec(2, seq("///", /[^\n]*/))),
    _statement: ($) =>
      choice(
        $.decl_statement,
        $.import_statement,
        $.defer_statement,
        $.errdefer_statement,
        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.discard_statement,
        $.test_statement,
        $.impl_statement,
        $.cfg_statement,
        $.labeled_statement,
        $.expression_statement,
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    _decl_modifier: ($) =>
      choice(
        "pub",
        $.extern_modifier,
        $.export_modifier,
        "threadlocal",
        "weak",
      ),

    // `@[name, name(args...), ...]` ahead of a declaration, field, interface method, or
    // function literal; a trailing comma asks the formatter to keep it on its own line.
    attribute_list: ($) => seq("@[", sepBy1(",", $.attribute), optional(","), "]"),

    attribute: ($) => seq(field("name", $.identifier), optional($.arguments)),

    // `extern` / `extern("lib")` / `extern("lib", "sym")`
    extern_modifier: ($) =>
      seq(
        "extern",
        optional(
          seq(
            "(",
            field("target", $.string_literal),
            optional(seq(",", field("link_name", $.string_literal))),
            ")",
          ),
        ),
      ),

    // `export` / `export("sym")`
    export_modifier: ($) =>
      seq("export", optional(seq("(", field("link_name", $.string_literal), ")"))),

    decl_statement: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        repeat($._decl_modifier),
        // `constexpr var` (either order) is the one legal pairing: a compile-time-mutable local.
        field(
          "kind",
          choice("var", "const", "constexpr", seq("constexpr", "var"), seq("var", "constexpr")),
        ),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        optional(seq(choice(":=", "="), field("value", $._value))),
        ";",
      ),

    // A value slot that may also hold a type with no expression spelling, e.g.
    // `const Bytes := []u8;`, `const Any := &dyn Writer;`, or `return [n]T;`. Where both readings
    // parse (`^i32`), the expression wins.
    _value: ($) =>
      choice(
        $._expression,
        prec.dynamic(-1, prec(-1, $.array_type)),
        prec.dynamic(-1, $.pointer_type),
        prec.dynamic(-1, $.reference_type),
        $.dyn_type,
        $.dyn_function_type,
      ),

    break_statement: ($) =>
      seq("break", optional(seq(":", field("label", $.identifier))), optional($._expression), ";"),
    return_statement: ($) => seq("return", optional($._value), ";"),

    impl_statement: ($) =>
      seq(
        "impl",
        optional($.impl_parameters),
        field("type", $._type),
        optional(seq("for", field("target", $._type))),
        field("body", $.impl_body),
      ),

    impl_parameters: ($) => seq("(", sepBy(",", $.impl_parameter), optional(","), ")"),

    impl_parameter: ($) =>
      seq(optional("constexpr"), field("name", $.identifier), ":", field("type", $._type)),

    impl_body: ($) => seq("{", repeat($._member), "}"),

    _statement_body: ($) => $._statement,

    expression_statement: ($) =>
      choice(
        seq($._expression, ";"),
        $.if_expression,
        $.match_expression,
        $.for_expression,
        $.while_expression,
        $.do_while_expression,
        $.loop_expression,
        $.labeled_expression,
        $.constexpr_expression,
        $.block,
      ),

    // ---------------------------------------------------------------- types

    _type: ($) =>
      choice(
        $.pointer_type,
        $.reference_type,
        $.array_type, // also covers slice types `[]T` (empty size)
        $.function_type,
        $.dyn_type,
        $.dyn_function_type,
        $.impl_type,
        $.primitive_type,
        $.identifier,
        $.dot_expression, // e.g. std.ArrayList, std.os.Errno
        $.call_expression, // e.g. std.ArrayList(u8)
        $.struct_expression,
        $.union_expression,
        $.enum_expression,
        $.interface_expression,
        $.builtin_call_expression, // e.g. @this()
        $.modified_type, // bare `mut`/`volatile` prefix, e.g. `var v: mut volatile i32;`
      ),

    // Recursive so `mut volatile T` is just two nested modified_types
    pointer_type: ($) => prec.right(seq("^", optional("mut"), field("inner", $._type))),
    reference_type: ($) => prec.right(seq("&", optional("mut"), field("inner", $._type))),
    array_type: ($) =>
      seq(
        "[",
        field("size", optional($._expression)),
        optional(":0"),
        "]",
        field("inner", $._type),
      ),

    // `dyn I` / `dyn mod.I` / `dyn I(Assoc = T, ...)`; wrapped as `&dyn I` / `^dyn I` via
    // reference/pointer types since `dyn` sits where a type normally would.
    dyn_type: ($) =>
      seq(
        "dyn",
        field("interface", choice($.identifier, $.dot_expression)),
        optional($.dyn_assoc_bindings),
      ),

    // `dyn Fn(n: i32): R` is sugar for the erased `fn(n: i32): R`; `Fn` stays a plain identifier so
    // a user `interface Fn` still parses as a `dyn_type`, told apart by `name:` vs `name =`.
    dyn_function_type: ($) =>
      seq(
        "dyn",
        field("name", $.identifier),
        "(",
        sepBy(",", $.parameter),
        optional(","),
        ")",
        optional($.callconv),
        ":",
        field("return_type", $._type),
      ),

    dyn_assoc_bindings: ($) => seq("(", sepBy(",", $.dyn_assoc_binding), optional(","), ")"),

    dyn_assoc_binding: ($) => seq(field("name", $.identifier), "=", field("type", $._type)),

    // `impl I` / `impl (A + B)` parameter-position sugar.
    callconv: ($) => seq("callconv", "(", field("convention", $.calling_convention), ")"),

    calling_convention: (_) =>
      seq(".", choice("c", "sysv", "win64", "stdcall", "fastcall", "aapcs")),

    // Every non-variadic parameter must be named (`fn(x: i32, done: ^bool): void`), not bare
    // types; the return type is mandatory. `extern fn` is the thin, C-ABI code pointer.
    function_type: ($) =>
      seq(
        optional("extern"),
        "fn",
        "(",
        sepBy(",", choice($.parameter, "...")),
        optional(","),
        ")",
        optional($.callconv),
        ":",
        field("return_type", $._type),
      ),

    primitive_type: ($) =>
      choice(
        $._sized_integer_type,
        "isize",
        "usize",
        "f16",
        "f32",
        "f64",
        "f80",
        "f128",
        "constexpr_int",
        "constexpr_float",
        "bool",
        "void",
        "type",
        "auto",
        "opaque",
        "noreturn",
      ),

    // Arbitrary-width integers: `u123`, `i3343`, etc. (width 1..65535, no leading zero).
    _sized_integer_type: (_) => token(prec(2, /[iu][1-9][0-9]*/)),

    // ---------------------------------------------------------------- expressions

    _expression: ($) =>
      choice(
        $.identifier,
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.multiline_string_literal,
        $.char_literal,
        $.boolean_literal,
        $.undefined_literal,
        $.unreachable_literal,
        $.nullptr_literal,
        $.builtin_call_expression,
        $.cfg_value_guard_call,
        $.call_expression,
        $.index_expression,
        $.dot_expression,
        $.implicit_access_expression,
        $.initializer_expression,
        $.array_expression,
        $.unary_expression,
        $.dereference_expression,
        $.reference_expression,
        $.address_of_expression,
        $.binary_expression,
        $.assignment_expression,
        $.range_expression,
        $.unwrap_expression,
        $.function_expression,
        $.struct_expression,
        $.union_expression,
        $.enum_expression,
        $.interface_expression,
        $.asm_expression,
        $.if_expression,
        $.match_expression,
        $.for_expression,
        $.while_expression,
        $.do_while_expression,
        $.loop_expression,
        $.labeled_expression,
        $.constexpr_expression,
        $.block,
        $.parenthesized_expression,
      ),

    // `constexpr { ... }` / `constexpr label: { ... }`: a compile-time-evaluated block usable as
    // a statement or, labeled, as a `break`-able value expression.
    cfg_guard_arm: ($) =>
      seq(
        field("predicate", choice($._expression, "_")),
        "=>",
        field("value", $._expression),
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    underscore: (_) => "_",
    boolean_literal: (_) => choice("true", "false"),
    undefined_literal: (_) => "undefined",
    nullptr_literal: (_) => "nullptr",

    // Lexeme shape mirrors lexer.cc's read_number(): digits (with optional 0x/0b/0o prefix),
    // optional `.` fraction, optional exponent, optional suffix. A suffix is triggered by one of
    // `uUiIzZlLfF` and then greedily consumes `[A-Za-z0-9]*`; widths are now arbitrary
    // (`u123`, `i3343`, `uz`) rather than the old fixed `u`/`l`/`ul` set (though `l`/`L` lexes as
    // a (now-rejected) suffix shape too, since the lexer doesn't validate it). A suffix starting
    // `f`/`F` -- or a `.` fraction, or an exponent -- makes the literal a float instead.
    integer_literal: (_) =>
      token(
        choice(
          seq(/0[xX][0-9a-fA-F_]+/, optional(seq(/[uUiIzZlL]/, /[A-Za-z0-9]*/))),
          seq(/0[bB][01_]+/, optional(seq(/[uUiIzZlL]/, /[A-Za-z0-9]*/))),
          seq(/0[oO][0-7_]+/, optional(seq(/[uUiIzZlL]/, /[A-Za-z0-9]*/))),
          seq(/[0-9][0-9_]*/, optional(seq(/[uUiIzZlL]/, /[A-Za-z0-9]*/))),
        ),
      ),

    // Float suffix is `f`/`F` + width digits (`f32`, `f64`, `f16`, `f128`, `f80`); a bare
    // `f`-suffixed integer (no `.`) is also a float, as is an exponent with no `.`. Hex floats
    // (`0x1.8p3`, `0x1p-4`, `0xA.8`) take a decimal `p` exponent, and since `f` is a hex digit
    // their suffix can only follow that exponent.
    float_literal: (_) =>
      token(
        choice(
          seq(
            /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
            ".",
            /[0-9a-fA-F][0-9a-fA-F_]*/,
            optional(seq(/[pP][+-]?[0-9][0-9_]*/, optional(seq(/[uUiIzZlLfF]/, /[A-Za-z0-9]*/)))),
          ),
          seq(
            /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
            /[pP][+-]?[0-9][0-9_]*/,
            optional(seq(/[uUiIzZlLfF]/, /[A-Za-z0-9]*/)),
          ),
          seq(
            /[0-9][0-9_]*/,
            ".",
            /[0-9][0-9_]*/,
            optional(/[eE][+-]?[0-9]+/),
            optional(seq(/[uUiIzZlLfF]/, /[A-Za-z0-9]*/)),
          ),
          seq(/[0-9][0-9_]*/, /[eE][+-]?[0-9]+/, optional(seq(/[uUiIzZlLfF]/, /[A-Za-z0-9]*/))),
          seq(/[0-9][0-9_]*/, seq(/[fF]/, /[A-Za-z0-9]*/)),
        ),
      ),

    // Escapes are their own nodes so highlighting can tell them apart from the text
    string_literal: ($) =>
      seq('"', repeat(choice($._string_content, $.escape_sequence)), token.immediate('"')),

    _string_content: (_) => token.immediate(prec(1, /[^"\\\n]+/)),

    // `\n`-style escapes, `\xHH` for one byte, and `\u{H...}` for a Unicode scalar value
    identifier: (_) =>
      token(
        choice(
          /[A-Za-z_][A-Za-z0-9_]*/,
          seq(
            '@"',
            repeat(
              choice(
                /[^"\\\n\r]/,
                seq("\\", choice(/[nrt\\'"0]/, /x[0-9A-Fa-f]{2}/, /u\{[0-9A-Fa-f]{1,6}\}/)),
              ),
            ),
            '"',
          ),
        ),
      ),

    // Right after `.` a keyword is a name: `.weak`, `x.type`
    _member_name: ($) =>
      choice(
        $.identifier,
        alias(
          choice(
            "fn",
            "var",
            "const",
            "constexpr",
            "struct",
            "enum",
            "union",
            "true",
            "false",
            "if",
            "else",
            "do",
            "match",
            "return",
            "defer",
            "errdefer",
            "loop",
            "for",
            "while",
            "continue",
            "break",
            "import",
            "bool",
            "void",
            "type",
            "auto",
            "opaque",
            "as",
            "pub",
            "extern",
            "export",
            "threadlocal",
            "weak",
            "callconv",
            "volatile",
            "mut",
            "move",
            "packed",
            "noreturn",
            "nullptr",
            "test",
            "impl",
            "interface",
            "dyn",
            "asm",
            "undefined",
            "unreachable",
          ),
          $.identifier,
        ),
      ),

    builtin_call_expression: ($) =>
      seq(field("function", alias(/@[A-Za-z_][A-Za-z0-9_]*/, $.builtin_identifier)), $.arguments),

    arguments: ($) =>
      seq("(", sepBy(",", choice($._expression, $._type, $.pack_expansion)), optional(","), ")"),

    // `f(rest...)`: forwards a parameter pack in place, one per call argument.
    call_expression: ($) =>
      prec(PREC.CALL, seq(field("function", $._expression), field("arguments", $.arguments))),

    dot_expression: ($) =>
      prec(PREC.FIELD, seq(field("object", $._expression), ".", field("member", $._member_name))),

    implicit_access_expression: ($) => prec(PREC.FIELD, seq(".", field("member", $._member_name))),

    initializer_expression: ($) =>
      choice(
        // Anonymous `.{ .a = 1 }` -- the leading `.` has no member, must not be confused with
        // implicit_access_expression's own `.member` shorthand
        seq(".", "{", sepBy(",", $._initializer_item), optional(","), "}"),
        seq(field("type", $._expression), "{", sepBy(",", $._initializer_item), optional(","), "}"),
      ),

    // Named `.field = value` or positional `value` (array-style / `Alias{ a, b, c }`) entry.
    _initializer_item: ($) => choice($.field_initializer, $._expression),

    // Precedence above PREC.FIELD so `.name =` shifts into a field initializer instead of
    // reducing `.name` as a standalone implicit_access_expression first.
    field_initializer: ($) =>
      prec(PREC.FIELD + 1, seq(".", field("name", $._member_name), "=", field("value", $._expression))),

    binary_expression: ($) => {
      const table = [
        [PREC.OR, "or"],
        [PREC.AND, "and"],
        [PREC.COMPARE, choice("<", "<=", ">", ">=", "==", "!=")],
        [PREC.BW_OR, "|"],
        [PREC.BW_XOR, "^"],
        [PREC.BW_AND, "&"],
        [PREC.SHIFT, choice("<<", ">>", "<<%", "<<|")],
        [PREC.ADD, choice("+", "-", "+%", "-%", "+|", "-|")],
        [PREC.MUL, choice("*", "/", "%", "*%", "*|")],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(field("left", $._expression), field("operator", operator), field("right", $._expression)),
          ),
        ),
      );
    },

    range_expression: ($) =>
      prec.left(
        PREC.RANGE,
        choice(
          seq(
            field("start", $._expression),
            field("operator", choice("..", "..=")),
            optional(field("end", $._expression)),
          ),
          seq(field("operator", choice("..", "..=")), optional(field("end", $._expression))),
        ),
      ),

    // -------------------------------------------------------------- functions

    interface_expression: ($) => seq("interface", "{", repeat($._interface_member), "}"),
