test/corpus/expressions.txt
==================
if as a value, including else-if chains
==================

const x := if (a) 1 else if (b) 2 else 3;
const f := fn(r: i32): R {
    return if (r < 0) .fail(r) else .of(r);
};

---

(source_file
  (decl_statement
    name: (identifier)
    value: (if_expression
      condition: (identifier)
      consequence: (integer_literal)
      alternate: (if_expression
        condition: (identifier)
        consequence: (integer_literal)
        alternate: (integer_literal))))
  (decl_statement
    name: (identifier)
    value: (function_expression
      (parameter
        name: (identifier)
        type: (primitive_type))
      return_type: (identifier)
      body: (block
        (return_statement
          (if_expression
            condition: (binary_expression
              left: (identifier)
              right: (integer_literal))
            consequence: (call_expression
              function: (implicit_access_expression
                member: (identifier))
              arguments: (arguments
                (identifier)))
            alternate: (call_expression
              function: (implicit_access_expression
                member: (identifier))
              arguments: (arguments
                (identifier)))))))))

==================
match arms that return, and trailing-comma pattern lists
==================

const f := fn(e: E): Error {
    return match (e) {
        .a,
        .b,
        => .not_found,
        .none => return w.flush(),
        _ => .other,
    };
};

---

(source_file
  (decl_statement
    name: (identifier)
    value: (function_expression
      (parameter
        name: (identifier)
        type: (identifier))
      return_type: (identifier)
      body: (block
        (return_statement
          (match_expression
            matcher: (identifier)
            (match_arm
              pattern: (implicit_access_expression
                member: (identifier))
              pattern: (implicit_access_expression
                member: (identifier))
              body: (implicit_access_expression
                member: (identifier)))
            (match_arm
              pattern: (implicit_access_expression
                member: (identifier))
              body: (return_statement
                (call_expression
                  function: (dot_expression
                    object: (identifier)
                    member: (identifier))
                  arguments: (arguments))))
            (match_arm
              pattern: (underscore)
              body: (implicit_access_expression
                member: (identifier)))))))))

==================
returning a type value
==================

const Array := fn(T: type, constexpr n: usize): type {
    return [n]T;
};

---

(source_file
  (decl_statement
    name: (identifier)
    value: (function_expression
      (parameter
        name: (identifier)
        type: (primitive_type))
      (parameter
        name: (identifier)
        type: (primitive_type))
      return_type: (primitive_type)
      body: (block
        (return_statement
          (array_type
            size: (identifier)
            inner: (identifier)))))))
