test/corpus/generics.txt
==================
Generic auto-parameter method with @this()
==================

const S := struct {
    x: i32,
    const make := fn(v: auto): i32 {
        let r: @this() = S{ .x = v };
        return r.x;
    };
};

---

(source_file
  (decl_statement
    name: (identifier)
    value: (struct_expression
      (field_declaration
        name: (identifier)
        type: (primitive_type))
      (decl_statement
        name: (identifier)
        value: (function_expression
          (parameter
            name: (identifier)
            type: (primitive_type))
          return_type: (primitive_type)
          body: (block
            (decl_statement
              name: (identifier)
              type: (builtin_call_expression
                function: (builtin_identifier)
                (arguments))
              value: (initializer_expression
                type: (identifier)
                (field_initializer
                  name: (identifier)
                  value: (identifier))))
            (return_statement
              (dot_expression
                object: (identifier)
                member: (identifier)))))))))

================================================================================
@TypeOf takes several operands and names their peer type
================================================================================

const T := @TypeOf(a, b, c);
let mut x: @TypeOf(a, b) = a;

--------------------------------------------------------------------------------

(source_file
  (decl_statement
    name: (identifier)
    value: (builtin_call_expression
      function: (builtin_identifier)
      (arguments
        (identifier)
        (identifier)
        (identifier))))
  (decl_statement
    name: (identifier)
    type: (builtin_call_expression
      function: (builtin_identifier)
      (arguments
        (identifier)
        (identifier)))
    value: (identifier)))
