test/corpus/hex_floats.txt
==================
Hexadecimal float literals
==================

const a := 0x1.8p3;
const b := 0X1P-4;
const c := 0xA.8;
const d := 0x1.8p3f32;
const e := 0xF_F.8_0p1_0;
const f := 0xff;
const g := 0x1..2;
const h := 0x1.len;

---

(source_file
  (decl_statement
    name: (identifier)
    value: (float_literal))
  (decl_statement
    name: (identifier)
    value: (float_literal))
  (decl_statement
    name: (identifier)
    value: (float_literal))
  (decl_statement
    name: (identifier)
    value: (float_literal))
  (decl_statement
    name: (identifier)
    value: (float_literal))
  (decl_statement
    name: (identifier)
    value: (integer_literal))
  (decl_statement
    name: (identifier)
    value: (range_expression
      start: (integer_literal)
      end: (integer_literal)))
  (decl_statement
    name: (identifier)
    value: (dot_expression
      object: (integer_literal)
      member: (identifier))))
